<resources>
    <string name="app_name">ArtOfficialFun</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="blue_button">BLUE</string>
    <string name="yellow_button">YELLOW</string>
    <string name="green_button">GREEN</string>
    <string name="box_six">Box Six</string>
    <string name="box_eight">Box Eight</string>
    <string name="box_seven">Box Seven</string>
    <string name="box_nine">Box Nine</string>
    <string name="tap_the_boxes_and_buttons">Tap The Screen and Buttons</string>
    <string name="how_to_play">How To Play:</string>
</resources>
